# Hello3D_Bruno-Groehs

./: CMakeLists.txt  README.md  RESULT.md  instruções.md
Modelos3D/: cube.mtl  scene.txt  traj_0.txt  traj_1.txt  traj_2.txt  traj_aereo.txt  traj_satelite.txt  traj_suzanne.txt  trajetoria.txt
src/: Diorama3D.cpp  Hello3D.cpp
